--- a/1.html
+++ b/1.html
@@ -21,6 +21,10 @@
 그 이후 추암해수욕장으로 가서 추암촛대바위를 구경하고, 황금박쥐 동굴로 가서 동굴체험도 했다. 동굴에선 led를 비추어놓아 분위기가 상당히 좋았다.
 둘쨋날 숙소는 풀뷰풀빌라로 예약을 해서, 동해에서 속초까지 차로 2시간을 이동하여 갔다. 숙소에 도착해서는 근처 포차에서 매운탕을 먹고, 숙소로 돌아와 챙겨갔던 칵테일을 마시며 하루를 마무리했다.
 </p>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/oMGhScc-jL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
+
   <br><br>
   <img src="coding.jpg" width="100%" title="강릉의 바다">
 </body>
