--- a/2.html
+++ b/2.html
@@ -17,6 +17,10 @@
   <p style="margin-left: 150px; margin-right: 150px;">성수동에서는 만나서 카페에서 사진도 찍고, 인생네컷도 찍은 다음<br>
   <strong><u><a href="https://www.instagram.com/beedoolkee999/" target="_blank" title="성북동비둘기 인스타그램">소극장</a></u></strong>을 보고 난 뒤, 컨셉에 충실한 술집에 가서 저녁과 술을 먹구 재밌는
   데이트를 했었다.</p>
+  <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
+
   <img src="성수동.jpg" width="100%" title="성수동의 한 카페">
 </body>
 </html>
